--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,5 @@
   "buildCommand": "astro build",
   "outputDirectory": "dist",
   "devCommand": "astro dev",
-  "installCommand": "npm install",
-  "functions": {
-    "src/pages/api/og/[filename].ts": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "installCommand": "npm install"
 }
